examples/smlfmt-1.2.0/test/fail/unexpected-while.sml
fun foo bar =
  foo while baz do fizzbuzz ()
